--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,27 @@
+@import url(https://fonts.googleapis.com/css?family=DM+Sans:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
+
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+CU:wght@100..400&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sacramento&display=swap');
+
+
+
+:root{
+  --dmsans: 'DM Sans', sans-serif;
+  --playwrite: 'Playwrite CU', cursive;
+  --sacramento: 'Sacramento', cursive;
+}
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: var(--dmsans);
+}
+
+
+
+
 .btn-nav {
   border-radius: 50px;
   background-color: white !important;
@@ -32,7 +56,7 @@
   background-color: green !important;
 }
 
- .link {
+.link {
   text-decoration: none;
   color: black;
 }
@@ -43,4 +67,43 @@
 
 .bucks-tooltip {
   background-color: green !important;
+}
+
+.parallelogram {
+	width: 100%;
+	height: 50px;
+	transform: skew(20deg);
+	background: orange;
+}
+.parallelogram-link {
+	background: black;
+  font-family: var(--dmsans);
+}
+.LS{
+    background-color: black;
+}
+
+.sacremento{
+  font-family: var(--sacramento);
+  font-size: 100px !important;
+}
+
+.increase{
+  font-family: var(--dmsans);
+  font-size: 30px;
+}
+
+.bodyimg{
+  width: 100% !important;
+}
+
+.bg-color{
+  background-color: orangered;
+}
+
+.norms{
+  padding: 300px 100px;
+  font-family: var(--dmsans);
+  font-size: 80px;
+
 }
